--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   nfc_manager: any
+  dio: any
+  flutter_secure_storage: any
 
 dev_dependencies:
   flutter_test:
