--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   dio: any
   flutter_secure_storage: any
   neon_widgets: any
+  battery_plus: any
+  animations: any
+  provider: any
+
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - asset/img/
+     - asset/img/splash/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
