--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   flutter_launcher_icons: "^0.13.1"
   flutter_social_button: ^1.1.4+1
   flutter_background_service: ^5.0.5
-  flutter_blue_plus : 1.4.0
+  flutter_bluetooth_serial: any
 
 flutter_launcher_icons:
   android: "launcher_icon"
